[package]

authors = [
    "Mattéo Rossillol‑‑Laruelle <matteo.rossillol--laruelle@grenoble-inp.org>",
    "Thomas Vidon <thomas.vidon@grenoble-inp.org>"
]

categories = ["command-line-utilities", "mathematics"]
description = "The 2023-2024 algorithmic project at ENSIMAG written in Rust"
edition = "2021"
keywords = ["ENSIMAG", "polygon"]
license = "GPL-3.0+"
name = "polygon"
repository = "https://github.com/beatussum/polygon/"
version = "0.9.1"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
derive_more = "0.99.17"
indoc = "2.0.4"
itertools = "0.12.1"
symm_impl = "0.1.2"

[features]
default = ["naive"]
frames = []
naive = []
